# knitmesh

./: README.md
Data/: scaled_patch.txt  stitchTile.txt
Knit/: CMakeLists.txt  CurvePatch.cpp  CurvePatch.h  DisjSet.h  ImageUtils.cpp  ImageUtils.h  PointGrid3D.cpp  PointGrid3D.h  Spline.cpp  Spline.h  SplineIO.cpp  SplineIO.h  main.cpp
Math/inc/: BBox.h  Vec3.h
Math/src/: Matrix4f.cpp
